# survey-framework

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  helper.py  main.py  plots.md  pyproject.toml  raceTo50_using_csv_only.py  raceto50_using_csv_only_centerhighlight.py  requirements.txt  setup.py  test.py  test_A2.py  zensical.toml
.github/workflows/: lint_and_typing.yml
data/: data_description.md
data_analysis/: analysis.py
data_import/: data_import.py  fixup_2024.py  survey_structure.py
docs/: general.md  index.md  markdown.md  plots.md  reference.md  workflow.md
documentation/: general.md  plots.md  workflow.md
order/: order2021.py
other/: raceTo50_using_csv_only.py
plotting/: barplots.py  barplots_sidebyside.py  helmholtzcolors.py  helper_plotenums.py  helper_plots.py  plotenums.py  plots.py
src/: main.py
src/data_import/: data_import.py  survey_structure.py  types.py
src/order/: order2021.py  order2024.py
src/plotting/: barplots.py  barplots_sidebyside.py  helmholtzcolors.py  helper_barplots.py  helper_plotenums.py  helper_plots.py  likertplot.py
src/survey_framework/data_analysis/: analysis.py  count_responses.py  helpers.py  scoring.py  sorting.py
src/survey_framework/data_import/: _types.py  data_import.py  fixup_2024.py  survey_structure.py  types.py
src/survey_framework/order/: order2021.py  order2024.py  shortening.py
src/survey_framework/plotting/: _barplot_enums.py  _barplots_helpers.py  barplots.py  barplots_sidebyside.py  heatmap.py  helmholtzcolors.py  helper_barplots.py  helper_plotenums.py  histplot.py  likertplot.py  sankeyplots.py  stacked.py  stackedbarplots.py  survivalplot.py
src/survey_framework/testing/: export.py  test_A.py  test_D.py  test_E.py
src/survey_framework/tests/: test_A.py  test_B.py  test_D.py  test_E.py  test_compare_2021.py  test_export.py  test_filtering.py  test_heatmap.py  test_sankey.py  test_scoring.py  test_survival.py
src/testing/: export.py  test_A.py  test_D.py  test_E.py
testing/: export.py  test_A.py  test_E.py
tests/: conftest.py  test_A.py  test_B.py  test_D.py  test_compare_2021.py  test_filtering.py  test_sankey.py  test_scoring.py
