[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "survey_framework"
version = "0.0.1"
authors = [{ name = "Helmholtz Juniors", email = "hejus@example.com" }]
description = "Framework code to analyze and visualize LimeSurvey data."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "seaborn~=0.13.2",
    "matplotlib~=3.9.2",
    "beautifulsoup4~=4.12.3",
    "lxml~=5.3.0",
    "plot-likert~=0.5.0",
    "pytest~=8.3.3",
    "ausankey~=1.4",
]

[project.optional-dependencies]
lint = [
    "ruff~=0.7.1",
    "mypy~=1.13.0",
    "types-beautifulsoup4~=4.12.0",
    "pandas-stubs~=2.2.3",
    "types-seaborn~=0.13.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
