[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-framework"
version = "0.1.0"
authors = [{ name = "Helmholtz Juniors", email = "steering@helmholtz-juniors.de" }]
description = "Framework code to analyze and visualize LimeSurvey data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.0",
    "plot-likert>=0.5.0",
    "pytest>=8.3.3",
    "ausankey>=1.4",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3",
    "types-seaborn>=0.13.2",
    "ty>=0.0.1a5",
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocstrings-python>=2.0.1",
    "zensical>=0.0.11",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
# supress "line too long" warnings for the lookup dictionary
"shortening.py" = ["E501"]
